# node-rusqlite

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  deno.json  index.d.ts  index.js  package.json  tsconfig.json
__test__/: index.spec.ts
benchmark/: README.md  basic-crud.bench.ts  bulk-operations.bench.ts  concurrent.bench.ts  connection-modes.bench.ts  node.bench.ts  prepared-statements.bench.ts  simple.bench.ts  transactions.bench.ts  utils.ts
bindings/: binding.d.ts  binding.js  db.ts  index.ts
crates/rusqlite/: Cargo.toml  Changelog.md  README.md  appveyor.yml  bindings.md
crates/rusqlite/libsqlite3-sys/: Upgrade.md
crates/rusqlite/src/: lib.rs  params.rs  statement.rs  transaction.rs
examples/: 01-basic-crud.ts  01-basic-setup.ts  02-crud-operations.ts  02-transactions.ts  03-prepared-statements.ts  04-parameterized-queries.ts  04-transactions-savepoints.ts  05-error-handling.ts  05-pragmas.ts  06-schema-inspection.ts  06-schema-introspection.ts  07-batch-operations.ts  07-statement-metadata.ts  08-statement-parameters.ts  09-configuration.ts  10-result-iteration.ts  11-statement-status.ts  12-concurrent-operations.ts  13-error-handling.ts  14-best-practices.ts  README.md  schema-reference.sql  test.ts
src/: column.rs  connection.rs  errors.rs  lib.rs  row.rs  statement.rs  transaction.rs  utils.rs
tests/: connection-config.test.ts  connection-execution.test.ts  connection-metadata.test.ts  connection-pragma.test.ts  connection-transaction.test.ts  connection.test.ts  interrupt.test.ts  row-iterator.test.ts  rows.test.ts  rusqlite.test.ts  setup.ts  statement-metadata.test.ts  statement-parameters.test.ts  statement-status.test.ts
