
[package]
name = "node_rusqlite"
authors = ["Karl robeck alferez <karlalferezfx@gmai.com>"]
edition = "2024"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.4", features = ["serde-json"] }
napi-derive = "3.5.3"
rusqlite = { version = "0.39.0", features = ["bundled", "column_metadata", "column_decltype", "backup"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
