
[package]
name = "node_rusqlite"
authors = ["Karl robeck alferez <karlalferezfx@gmai.com>"]
edition = "2024"
version = "0.1.0"

[workspace]
members = ["crates/rusqlite"]

[workspace.lints.clippy]
ref_option = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_semicolon = "warn"
unused_trait_names = "warn"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.4", features = ["serde-json"] }
napi-derive = "3.5.3"
rusqlite = { path = "./crates/rusqlite", features = ["bundled-full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
